--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="24dp"
+        android:layout_marginLeft="9dp"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,19 +21,22 @@
 
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_logo"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="@string/logo_description"
-            android:layout_marginEnd="16dp"/>
+            android:src="@drawable/ic_logo" />
 
         <TextView
             android:id="@+id/txt_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
             android:text="Chào Mừng Admin"
+            android:textAlignment="center"
             android:textSize="22sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Đường kẻ phân chia -->
