--- a/app/src/main/res/layout/activity_edit_employee.xml
+++ b/app/src/main/res/layout/activity_edit_employee.xml
@@ -124,41 +124,18 @@
         app:layout_constraintTop_toBottomOf="@id/btn_select_position" />
 
     <!-- Image Preview -->
-    <ImageView
-        android:id="@+id/iv_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="Hình ảnh nhân viên"
-        android:scaleType="centerCrop"
-        android:background="#dddddd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_hire_date" />
 
     <!-- Image Selection Button -->
-    <Button
-        android:id="@+id/btn_choose_image"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Chọn Ảnh"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_image" />
 
     <!-- Save Button -->
     <Button
         android:id="@+id/btn_save_employee"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Lưu"
         android:backgroundTint="@color/colorPrimary"
+        android:text="Lưu"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_choose_image" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_hire_date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
