--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -151,7 +151,7 @@
                 android:id="@+id/img_evaluation"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
-                android:src="@drawable/ic_evaluation"
+                android:src="@drawable/ic_salary"
                 android:contentDescription="@string/logo_description_evaluation"
                 android:layout_marginEnd="16dp"/>
 
